    pool.manage(dbapi).connect() so that serialization
    of args is not necessary.

  - The entry point resolution supported by 
    create_engine() now supports resolution of
    individual DBAPI drivers on top of a built-in
    or entry point-resolved dialect, using the 
    standard '+' notation - it's converted to
    a '.' before being resolved as an entry
    point.  [ticket:2286]

- types
  - Extra keyword arguments to the base Float 
    type beyond "precision" and "asdecimal" are ignored;
    added a deprecation warning here and additional
    docs, related to [ticket:2258]

- sqlite
  - Ensured that the same ValueError is raised for
    illegal date/time/datetime string parsed from
    the database regardless of whether C 
    extensions are in use or not.

- postgresql
  - Added "postgresql_using" argument to Index(), produces
    USING clause to specify index implementation for
    PG.  [ticket:2290].  Thanks to Ryan P. Kelly for
    the patch.

  - Fixed bug related to [ticket:2141] whereby the 
    same modified index behavior in PG 9 affected
    primary key reflection on a renamed column.
    [ticket:2291].  Also in 0.6.9.

  - Reflection functions for Table, Sequence no longer
    case insensitive.  Names can be differ only in case
    and will be correctly distinguished.  [ticket:2256]

  - Use an atomic counter as the "random number" 
    source for server side cursor names; 
    conflicts have been reported in rare cases.

  - Narrowed the assumption made when reflecting
    a foreign-key referenced table with schema in
    the current search path; an explicit schema will
    be applied to the referenced table only if 
    it actually matches that of the referencing table,
    which also has an explicit schema.   Previously
    it was assumed that "current" schema was synonymous
    with the full search_path.  [ticket:2249]

- mysql
  - a CREATE TABLE will put the COLLATE option 
    after CHARSET, which appears to be part of 